add wdt for trunk
git-svn-id: file:///opt/svnrepo/mapu/toolchains/trunk@633 cb94f8c2-beb9-42d2-aaaf-6dc30ea5c36a

Former-commit-id: c756a09b53b541e37d1d957735bea5d775854444

--- a/kernel/drivers/watchdog/Kconfig
+++ b/kernel/drivers/watchdog/Kconfig
@@ -206,6 +206,14 @@ config DW_WATCHDOG
 	  watchdog timer found in many ARM chips.
 	  To compile this driver as a module, choose M here: the
 	  module will be called dw_wdt.
+config MAPU_DW_WATCHDOG
+    tristate "mapu DesignWare watchdog"
+    depends on ARM && HAVE_CLK
+    help
+      Say Y here if to include support for the Synopsys DesignWare
+      watchdog timer found in many ARM chips.
+      To compile this driver as a module, choose M here: the
+      module will be called dw_wdt.
 
 config MPCORE_WATCHDOG
 	tristate "MPcore watchdog"
