--- a/llvm-3.8/tools/clang/lib/Headers/CMakeLists.txt
+++ b/llvm-3.8/tools/clang/lib/Headers/CMakeLists.txt
@@ -80,6 +80,7 @@ set(files
   xtestintrin.h
   avx512ifmaintrin.h
   avx512ifmavlintrin.h
+  mspu-intrin.h
   )
 
 set(output_dir ${LLVM_LIBRARY_OUTPUT_INTDIR}/clang/${CLANG_VERSION}/include)
