luoxq: add dw_spi and dw_gpio
git-svn-id: file:///opt/svnrepo/mapu/toolchains/trunk@777 cb94f8c2-beb9-42d2-aaaf-6dc30ea5c36a

Former-commit-id: 93b5365feeffc249b0f0255aa43fe788df4b7b0a

--- a/u-boot/arch/arm/dts/Makefile
+++ b/u-boot/arch/arm/dts/Makefile
@@ -167,6 +167,8 @@ dtb-$(CONFIG_MACH_SUN9I) += \
 
 dtb-$(CONFIG_VF610) += vf500-colibri.dtb \
 	vf610-colibri.dtb
+	
+dtb-$(CONFIG_MAPU_SIM) += mapu_sim.dtb
 
 targets += $(dtb-y)
 
