--- a/u-boot/Makefile
+++ b/u-boot/Makefile
@@ -344,7 +344,7 @@ OBJDUMP		= $(CROSS_COMPILE)objdump
 AWK		= awk
 PERL		= perl
 PYTHON		= python
-DTC		= dtc
+DTC		= $(DT_COMPILE)
 CHECK		= sparse
 
 CHECKFLAGS     := -D__linux__ -Dlinux -D__STDC__ -Dunix -D__unix__ \
