luoxq: add dw i2c
git-svn-id: file:///opt/svnrepo/mapu/toolchains/trunk@779 cb94f8c2-beb9-42d2-aaaf-6dc30ea5c36a

Former-commit-id: d310df6b82d346f3f618142ac72fcb08cfb879f7

--- a/u-boot/configs/mapu_sim_defconfig
+++ b/u-boot/configs/mapu_sim_defconfig
@@ -156,7 +156,6 @@ CONFIG_MAPU_SIM=y
 # ARM debug
 #
 # CONFIG_DEBUG_LL is not set
-# CONFIG_DEBUG_LL_UART_8250 is not set
 CONFIG_DEFAULT_DEVICE_TREE="mapu_sim"
 
 #
@@ -238,7 +237,7 @@ CONFIG_CMD_FLASH=y
 # CONFIG_CMD_NAND is not set
 # CONFIG_CMD_SF is not set
 CONFIG_CMD_SPI=y
-# CONFIG_CMD_I2C is not set
+CONFIG_CMD_I2C=y
 # CONFIG_CMD_USB is not set
 CONFIG_CMD_FPGA=y
 
