--- a/u-boot/arch/arm/dts/mapu_sim.dts
+++ b/u-boot/arch/arm/dts/mapu_sim.dts
@@ -34,14 +34,30 @@
       #size-cells = <0>;
       reg = <0x50800000 0x1000>;
       interrupts = <0 16 4>;
-    };
-    
-    i2c0: i2c@50a00000 {
-      #address-cells = <1>;
-      #size-cells = <0>;
-      compatible = "snps,designware-i2c";
-      reg = <0x50a00000 0x1000>;
-      interrupts = <0 24 0x4>;
+      
+      porta: gpio-controller@0 {
+        compatible = "snps,dw-apb-gpio-port";
+        bank-name = "porta";
+        gpio-controller;
+        #gpio-cells = <2>;
+        snps,nr-gpios = <29>;
+        reg = <0>;
+        #interrupt-controller;
+        #interrupt-cells = <2>;
+        #interrupts = <0 164 4>;
+      };
+      
+      portb: gpio-controller@1 {
+        compatible = "snps,dw-apb-gpio-port";
+        bank-name = "portb";
+        gpio-controller;
+        #gpio-cells = <2>;
+        snps,nr-gpios = <29>;
+        reg = <1>;
+        #interrupt-controller;
+        #interrupt-cells = <2>;
+        #interrupts = <0 164 4>;
+      };
     };
 
 };
