--- a/u-boot/configs/mapu_sim_defconfig
+++ b/u-boot/configs/mapu_sim_defconfig
@@ -253,12 +253,12 @@ CONFIG_CMD_SETEXPR=y
 # Network commands
 #
 CONFIG_CMD_NET=y
-CONFIG_CMD_TFTPPUT=y
-CONFIG_CMD_TFTPSRV=y
-CONFIG_CMD_RARP=y
+# CONFIG_CMD_TFTPPUT is not set
+# CONFIG_CMD_TFTPSRV is not set
+# CONFIG_CMD_RARP is not set
 # CONFIG_CMD_DHCP is not set
-CONFIG_CMD_NFS=y
-CONFIG_CMD_PING=y
+# CONFIG_CMD_NFS is not set
+# CONFIG_CMD_PING is not set
 # CONFIG_CMD_CDP is not set
 # CONFIG_CMD_SNTP is not set
 # CONFIG_CMD_DNS is not set
