luoxq: update ethernet driver with ip setting
git-svn-id: file:///opt/svnrepo/mapu/toolchains/trunk@796 cb94f8c2-beb9-42d2-aaaf-6dc30ea5c36a

Former-commit-id: 5d312bc1bef1eb25bd8a384d17146028e424e614

--- a/u-boot/configs/mapu_sim_defconfig
+++ b/u-boot/configs/mapu_sim_defconfig
@@ -253,10 +253,10 @@ CONFIG_CMD_SETEXPR=y
 # Network commands
 #
 CONFIG_CMD_NET=y
-# CONFIG_CMD_TFTPPUT is not set
-# CONFIG_CMD_TFTPSRV is not set
+CONFIG_CMD_TFTPPUT=y
+CONFIG_CMD_TFTPSRV=y
 # CONFIG_CMD_RARP is not set
-# CONFIG_CMD_DHCP is not set
+CONFIG_CMD_DHCP=y
 # CONFIG_CMD_NFS is not set
 # CONFIG_CMD_PING is not set
 # CONFIG_CMD_CDP is not set
@@ -295,8 +295,8 @@ CONFIG_OF_CONTROL=y
 # CONFIG_OF_SEPARATE is not set
 CONFIG_OF_EMBED=y
 CONFIG_NET=y
-# CONFIG_NET_RANDOM_ETHADDR is not set
-# CONFIG_NETCONSOLE is not set
+CONFIG_NET_RANDOM_ETHADDR=y
+CONFIG_NETCONSOLE=y
 
 #
 # Device Drivers
@@ -466,7 +466,7 @@ CONFIG_HAVE_PRIVATE_LIBGCC=y
 CONFIG_SYS_HZ=1000
 # CONFIG_SYS_VSNPRINTF is not set
 CONFIG_REGEX=y
-# CONFIG_LIB_RAND is not set
+CONFIG_LIB_RAND=y
 # CONFIG_CMD_DHRYSTONE is not set
 # CONFIG_RSA is not set
 # CONFIG_TPM is not set
