luoxq: fix ethnet
git-svn-id: file:///opt/svnrepo/mapu/toolchains/trunk@804 cb94f8c2-beb9-42d2-aaaf-6dc30ea5c36a

Former-commit-id: ec2c9d2ca687245e12ee7b5d5e08de83f8cac8c8

--- a/u-boot/configs/mapu_sim_defconfig
+++ b/u-boot/configs/mapu_sim_defconfig
@@ -258,11 +258,11 @@ CONFIG_CMD_TFTPSRV=y
 # CONFIG_CMD_RARP is not set
 CONFIG_CMD_DHCP=y
 # CONFIG_CMD_NFS is not set
-# CONFIG_CMD_PING is not set
+CONFIG_CMD_PING=y
 # CONFIG_CMD_CDP is not set
 # CONFIG_CMD_SNTP is not set
 # CONFIG_CMD_DNS is not set
-# CONFIG_CMD_LINK_LOCAL is not set
+CONFIG_CMD_LINK_LOCAL=y
 
 #
 # Misc commands
