--- a/MaPUSim/ARM-QEMU/hw/net/Makefile.objs
+++ b/MaPUSim/ARM-QEMU/hw/net/Makefile.objs
@@ -30,6 +30,8 @@ obj-$(CONFIG_MILKYMIST) += milkymist-minimac2.o
 obj-$(CONFIG_PSERIES) += spapr_llan.o
 obj-$(CONFIG_XILINX_ETHLITE) += xilinx_ethlite.o
 
+obj-$(CONFIG_DWGMAC) += dw_apb_gmac.o
+
 obj-$(CONFIG_VIRTIO) += virtio-net.o
 obj-y += vhost_net.o
 
