added the basic assembly examples

--- a/examples/2.Basic_ASM/Makefile
+++ b/examples/2.Basic_ASM/Makefile
@@ -1,10 +1,9 @@
-EX_NAME=Hello_MaPU
+EX_NAME=Basic_ASM
 
 include ../Makefile.setup
 include ../Makefile.builddefs
 
-all:${EX_NAME}.run
+all:${EX_NAME}.exec
 	make clean
 
 include ../Makefile.clean
-
