added the MaPU logo

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-slate
 title: MaPU
-description: The next generation DSP architecture
+description: An Open Source DSP Ecosystem
 github: [metadata]
